<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.cqupt.campussocialmotion.Activity.LoginActivity"
    android:background="@drawable/login_back5">

    <LinearLayout
        android:paddingTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_above="@+id/login_id"
            android:layout_alignStart="@+id/login_pwd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/login_icon"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/login_icon_2"/>

        <EditText
            android:id="@+id/login_id"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_pwd"
            android:layout_alignStart="@+id/imageView"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_account"
            android:drawablePadding="8dp"
            android:hint="@string/input_id"
            android:inputType="numberSigned"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"/>

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:hint="@string/input_pwd"
            android:inputType="numberPassword"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="115dp"
            android:background="@drawable/login_normal"
            android:text="@string/app_login"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>

    </LinearLayout>

</LinearLayout>
