<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/index"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:fitsSystemWindows="true"/>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#ffffff">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/found"/>

            <TextView
                android:padding="2dp"
                android:textSize="10sp"
                android:layout_centerInParent="true"
                android:text="@string/nav_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/found"
                android:id="@+id/textView5"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/exercise"/>
            <TextView
                android:padding="2dp"
                android:textSize="10sp"
                android:layout_centerInParent="true"
                android:text="@string/nav_exc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exercise"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/add"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:src="@drawable/add" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/circle"/>
            <TextView
                android:padding="2dp"
                android:textSize="10sp"
                android:layout_centerInParent="true"
                android:text="@string/nav_cir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/circle"
                android:id="@+id/textView"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/me"/>
            <TextView
                android:padding="2dp"
                android:textSize="10sp"
                android:layout_centerInParent="true"
                android:text="@string/nav_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/me"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>